@@ -1,6 +1,6 @@
 #### configuration
 
-VERSION		= 0.6.2pre
+VERSION		= 0.6.2
 NAME		= gamefox
 
 include Makefile.common
