@@ -1,6 +1,7 @@
-2008-08-xx:
+2008-08-04:
     * version 0.6.2
     * Remove gfaqs9 support
+    * boards.gamefaqs.com/gfaqs -> www.gamefaqs.com/boards
 
 2008-07-31:
     * version 0.6.1
